--- a/examples/base/feed/links/only-link.mdx
+++ b/examples/base/feed/links/only-link.mdx
@@ -2,4 +2,4 @@
 link: https://css-tricks.com/how-to-section-your-html/
 ---
 
-title, cover (image), and description will be get from link
+title, image, and description will be get from link
