--- a/examples/base/feed/posts/some.mdx
+++ b/examples/base/feed/posts/some.mdx
@@ -1,6 +1,6 @@
 ---
 title: Your Great Blog Post
-cover: cover.jpg
+image: image.jpg
 date: 2019-03-25
 description: Here is a helpful excerpt or brief description of this blog post.
 tags: ['reactjs', 'introduction']
