--- a/examples/base/feed/posts/full-post.mdx
+++ b/examples/base/feed/posts/full-post.mdx
@@ -1,11 +1,13 @@
 ---
-title: Your Great Blog Post
+title: Full Blog Post
 image: image.jpg
 date: 2019-03-25
+slug: 'full-blog-post-slug'
+redirects: ['old-link', 'some/old-link/too']
 description: Here is a helpful excerpt or brief description of this blog post.
 tags: ['reactjs', 'introduction']
 draft: false
 hide: false
 ---
 
-Some
+Some;
