--- a/examples/base/src/gatsby-theme-chronoblog/siteHeader.mdx
+++ b/examples/base/src/gatsby-theme-chronoblog/siteHeader.mdx
@@ -1,3 +1,3 @@
-<a href={props.site.siteUrl} title={props.site.title}>
-  <h3>{props.site.title}</h3>
+<a href={props.siteMetadata.siteUrl} title={props.siteMetadata.title}>
+  <h1>{props.siteMetadata.title}</h1>
 </a>
