--- a/examples/base/feed/posts/post-draft-true.mdx
+++ b/examples/base/feed/posts/post-draft-true.mdx
@@ -2,7 +2,7 @@
 title: Post Draft True
 image: image.jpg
 date: 2018-03-25
-slug: 'full-blog-post-slug'
+slug: 'draft-true-full-blog-post-slug'
 redirects: ['old-link', 'some/old-link/too']
 description: Here is a helpful excerpt or brief description of this blog post.
 tags: ['reactjs', 'introduction']
