--- a/packages/gatsby-theme-chronoblog/src/siteHeader.mdx
+++ b/packages/gatsby-theme-chronoblog/src/siteHeader.mdx
@@ -2,8 +2,10 @@ import SwitchButton from './components/switch-button';
 import { Link } from 'gatsby';
 
 <Link to="/" style="color: inherit; text-decoration: none;">
-  <h3>{props.siteMetadata.title}</h3>
+  <h3 style="margin-top: auto; margin-bottom: auto;">
+    {props.siteMetadata.title}
+  </h3>
 </Link>
 
 <div style="margin-left: auto; margin-right: auto;"></div>
-<SwitchButton></SwitchButton>
+<SwitchButton />
