useInputValue hook and types

--- a/examples/base/pages/contact.mdx
+++ b/examples/base/pages/contact.mdx
@@ -3,3 +3,5 @@
 Pages don't have date, comments, previews in feed (and they don't appears in feed), they can only have `link` and `redirects`. Name of the file will be a link if no option provided (like this file).
 
 Just like in posts, at the end of page lives main feed of the site.
+
+<Feed />
