--- a/examples/base/pages/contact.mdx
+++ b/examples/base/pages/contact.mdx
@@ -4,4 +4,4 @@ Pages don't have date, comments, previews in feed (and they don't appears in fee
 
 Just like in posts, at the end of page lives main feed of the site.
 
-<Feed />
+<Feed searchInput />
