--- a/examples/base/src/gatsby-theme-chronoblog/site-header.mdx
+++ b/examples/base/src/gatsby-theme-chronoblog/site-header.mdx
@@ -1,4 +1,4 @@
-<HeaderTitle>{props.siteMetadata.title}</HeaderTitle>
+<SiteHeaderTitle>{props.siteMetadata.title}</SiteHeaderTitle>
 
 <div style="margin-left: auto; margin-right: auto;"></div>
-<LightDarkSwitchButton />
+<LightDarkSwitchButton darkLabel="🌙" lightLabel='☀️'/>
