--- a/examples/base/pages/index.mdx
+++ b/examples/base/pages/index.mdx
@@ -7,4 +7,5 @@ We were both enamored by the work that people like Nicole Sullivan and Nicolas G
 In late 2013, I'd taken some of the ideas Adam and I were talking about at the time, and some of the problems we were working on at Kickstarter (involving a 1MB+ CSS bundle), and released the first version of Basscss. Around the same time, Adam released Tachyons. We both continued to develop each project separately and never landed on a common API for the two libraries.
 
 <FeedSearch />
+<FeedTags />
 <FeedItems />
