--- a/examples/base/content/posts/full-post.mdx
+++ b/examples/base/content/posts/full-post.mdx
@@ -5,7 +5,7 @@ date: 2019-03-25
 slug: 'full-blog-post-slug'
 redirects: ['old-link', 'some/old-link/too']
 description: Here is a helpful excerpt or brief description of this blog post.
-tags: ['reactjs', 'introduction']
+tags: ['reactjs', 'introduction', 'some']
 draft: false
 hide: false
 ---
