--- a/examples/base/content/posts/post-no-description.mdx
+++ b/examples/base/content/posts/post-no-description.mdx
@@ -1,13 +1,8 @@
 ---
-title: Full Blog Post
+title: No description Post
 image: image.jpg
-date: 2019-03-25
-slug: 'full-blog-post-slug'
-redirects: ['old-link', 'some/old-link/too']
-description: Here is a helpful excerpt or brief description of this blog post.
+date: 2019-05-25
 tags: ['reactjs', 'introduction', 'some']
-draft: false
-hide: false
 ---
 
 Back in early 2013, I was working at a small startup in San Francisco called Stitch Fix, alongside Adam Morse and a handful of others. We were designing and building out early versions of their marketing pages and some internal tools. I had the word designer in my title, and until that point in my career, I'd not shipped much production code for work. I learned Flash in college and taught myself HTML and CSS on the side over the years, using it for small side projects and design prototypes for user research, but had never used Git and knew next-to-nothing about JavaScript.
