--- a/examples/base/content/posts/full-post/index.mdx
+++ b/examples/base/content/posts/full-post/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Full Blog Post
-image: image.jpg
+cover: ./image.jpg
 date: 2019-03-25
 slug: 'full-blog-post-slug'
 redirects: ['old-link', 'some/old-link/too']
