gen links pages

--- a/examples/base/content/links/full-link/index.mdx
+++ b/examples/base/content/links/full-link/index.mdx
@@ -1,9 +1,9 @@
 ---
 title: full link
 link: https://twitter.com/ganevru
-image: image.jpg
+cover: ./image.jpg
 date: 2019-03-25
-tags: ['reactjs', 'introduction']
+tags: ['reactjs', 'introduction', 'link']
 draft: false
 hide: false
 ---
