--- a/examples/base/content/links/only-link.mdx
+++ b/examples/base/content/links/only-link.mdx
@@ -2,6 +2,7 @@
 title: only link
 date: 2019-02-05
 link: https://css-tricks.com/how-to-section-your-html/
+tags: ['link']
 ---
 
 title, image, and description will be get from link
