--- a/examples/base/content/links/only-link.mdx
+++ b/examples/base/content/links/only-link.mdx
@@ -1,7 +1,7 @@
 ---
 title: only link
 date: 2019-02-05
-link: https://css-tricks.com/how-to-section-your-html/
+link: css-tricks.com/how-to-section-your-html
 tags: ['link']
 ---
 
