external link icon for link card

--- a/examples/base/content/links/full-link/index.mdx
+++ b/examples/base/content/links/full-link/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: full link
+title: full link some text for long long text - test and only test and some Rose
 link: https://twitter.com/ganevru
 cover: ./image.jpg
 date: 2019-03-25
