--- a/examples/base/content/posts/full-post/index.mdx
+++ b/examples/base/content/posts/full-post/index.mdx
@@ -1,9 +1,9 @@
 ---
 title: Full Blog Post
 cover: ./image.jpg
-date: 2019-03-25
+date: 2019-07-25
 slug: 'full-blog-post-slug'
-redirects: ['old-link', 'some/old-link/too']
+redirect_from: ['/old-link', '/some/old-link/too/']
 description: Here is a helpful excerpt or brief description of this blog post.
 tags: ['reactjs', 'introduction', 'some']
 draft: false
