start of chronoblog starter

--- a/packages/gatsby-theme-chronoblog/src/site-header.mdx
+++ b/packages/gatsby-theme-chronoblog/src/site-header.mdx
@@ -1,1 +1,4 @@
-# MAIN src
+<SiteHeaderTitle>{props.siteMetadata.title}</SiteHeaderTitle>
+
+<div style="margin-left: auto; margin-right: auto;"></div>
+<LightDarkSwitchButton darkLabel="🌙" lightLabel='☀️'/>
