--- a/starters/chronoblog/src/gatsby-theme-chronoblog/post-footer.mdx
+++ b/starters/chronoblog/src/gatsby-theme-chronoblog/post-footer.mdx
@@ -1,1 +1,13 @@
+<hr />
+
 <p>{props.siteMetadata.author}</p>
+
+This is a **post-footer.mdx** - this file lives here: `src/gatsby-theme-chronoblog/post-footer.mdx`.
+
+Everything that will be written here will be displayed after **each post**.
+
+Write your name here, your email, post your avatar, put links to your social networks.
+
+Since this is `mdx` you can write js code here. But no one forces you to do this, you can treat this file like a regular Markdown.
+
+<hr />
