--- a/starters/chronoblog/pages/index.mdx
+++ b/starters/chronoblog/pages/index.mdx
@@ -1,6 +1,41 @@
-# Chronoblog ⌛✏️🔗
+# Chronoblog ⌛
 
-Some sings about me.
+Welcome to the Chronoblog starter!
+
+This text lives in a file: **`pages/index.mdx`** - replace it with what you want to see on the main page of your site. 🧐
+
+The main idea of ​​the Chronoblog is to help you create your personal website. Collect in one place everything you have done and written.
+
+You can think of the Chronoblog as a personal blog, but in addition to regular posts ✏️, you can post notes 📝 and links 🔗 to any materials.
+
+Another way to think about Chronoblog is something like RSS Feed - but this Feed is not for you, **but about you**.
+
+- Your posts. Do you have posts on the medium? On dev to?
+- Your articles for online publications
+- Interview with you
+- Video with you
+- Your presentations
+- Your projects
+- Your portfolio
+- Scientific publications
+- Podcasts - yours or just with your participation
+- Your achievements - certificates, awards
+
+All this can be placed on your personal website, in one feed, in chronological order ⌛ and tagged 🏷️.
+
+## If you made your site using Chronoblog
+
+Tweet me about it: [@Ganevru](https://twitter.com/Ganevru).
+
+Or make a contribution to the [Chronoblog repository](https://github.com/Ganevru/gatsby-theme-chronoblog) with a link to your site - in README in the section "sites using Chronoblog".
+
+I am very interested to know how you use Chronoblog! 🤓
+
+## More information on how to use the Chronoblog
+
+More information in the repository: [github.com/Ganevru/gatsby-theme-chronoblog](https://github.com/Ganevru/gatsby-theme-chronoblog)
+
+There you can ask your questions, make suggestions, etc.
 
 <FeedSearch />
 <FeedTags />
