--- a/starters/chronoblog/pages/index.mdx
+++ b/starters/chronoblog/pages/index.mdx
@@ -10,24 +10,9 @@ You can think of the Chronoblog as a personal blog, but in addition to regular p
 
 Another way to think about Chronoblog is something like RSS Feed - but this Feed is not for you, **but about you**.
 
-- Your posts. Do you have posts on the medium? On dev to?
-- Your articles for online publications
-- Interview with you
-- Video with you
-- Your presentations
-- Your projects
-- Your portfolio
-- Scientific publications
-- Podcasts - yours or just with your participation
-- Your achievements - certificates, awards
-
-All this can be placed on your personal website, in one feed, in chronological order ⌛ and tagged 🏷️.
-
 ## If you made your site using Chronoblog
 
-Tweet me about it: [@Ganevru](https://twitter.com/Ganevru).
-
-I am very interested to know how you use Chronoblog! 🤓
+Tweet me about it: [@Ganevru](https://twitter.com/Ganevru) 🤓
 
 ## More information on how to use the Chronoblog
 
