feed-search style

--- a/starters/chronoblog/pages/index.mdx
+++ b/starters/chronoblog/pages/index.mdx
@@ -6,7 +6,7 @@ This text lives in a file: **`pages/index.mdx`** - replace it with what you want
 
 The main idea of ​​the Chronoblog is to help you create your personal website. Collect in one place everything you have done and written.
 
-You can think of the Chronoblog as a personal blog, but in addition to regular posts ✏️, you can post notes 📝 and links 🔗 to any materials.
+You can think of the Chronoblog as a personal blog, but in addition to regular posts ✏️, you can post notes 📝 and links 🔗 to any materials. And all this with tags.
 
 Another way to think about Chronoblog is something like RSS Feed - but this Feed is not for you, **but about you**.
 
