--- a/starters/chronoblog/pages/index.mdx
+++ b/starters/chronoblog/pages/index.mdx
@@ -19,5 +19,5 @@ Tweet me about it: [@Ganevru](https://twitter.com/Ganevru) 🤓
 More information in the repository: [github.com/Ganevru/gatsby-theme-chronoblog](https://github.com/Ganevru/gatsby-theme-chronoblog)
 
 <FeedSearch />
-<FeedTags />
+<Tags />
 <FeedItems />
