favicons and images

--- a/starters/chronoblog/pages/index.mdx
+++ b/starters/chronoblog/pages/index.mdx
@@ -1,6 +1,8 @@
-# Chronoblog ⌛
+# ⌛ Gatsby Theme Chronoblog
 
 Welcome to the Chronoblog starter!
+
+![banner-small](./banner-small.jpg)
 
 This text lives in a file: **`pages/index.mdx`** - replace it with what you want to see on the main page of your site. 🧐
 
