--- a/starters/chronoblog/src/gatsby-theme-chronoblog/post-footer.mdx
+++ b/starters/chronoblog/src/gatsby-theme-chronoblog/post-footer.mdx
@@ -1,6 +1,6 @@
 <hr />
 
-<p>{props.siteMetadata.author}</p>
+<p><b>{props.siteMetadata.author}</b></p>
 
 This is a **post-footer.mdx** - this file lives here: `src/gatsby-theme-chronoblog/post-footer.mdx`.
 
