images to src/images

--- a/starters/chronoblog/pages/index.mdx
+++ b/starters/chronoblog/pages/index.mdx
@@ -2,7 +2,7 @@
 
 Welcome to the Chronoblog starter!
 
-![banner-small](./banner-small.jpg)
+![banner-small](../src/images/banner-small.png)
 
 This text lives in a file: **`pages/index.mdx`** - replace it with what you want to see on the main page of your site. 🧐
 
