--- a/starters/chronoblog/src/gatsby-theme-chronoblog/post-footer.mdx
+++ b/starters/chronoblog/src/gatsby-theme-chronoblog/post-footer.mdx
@@ -1,13 +1,29 @@
 <hr />
 
+<p />
+
+<img
+  style={{
+    maxWidth: '120px',
+    marginRight: '15px',
+    marginBottom: '5px',
+    float: 'left',
+    borderRadius: '50%',
+    overflow: 'hidden',
+    boxShadow: 'inset 0 2px 4px 0 hsla(0, 0%, 0%, .3)'
+  }}
+  src="/avatar.png"
+/>
+
 <p><b>{props.siteMetadata.author}</b></p>
+
+author@mail.com  
+twitter: @author
 
 This is a **post-footer.mdx** - this file lives here: `src/gatsby-theme-chronoblog/post-footer.mdx`.
 
 Everything that will be written here will be displayed after **each post**.
 
 Write your name here, your email, post your avatar, put links to your social networks.
-
-Since this is `mdx` you can write js code here. But no one forces you to do this, you can treat this file like a regular Markdown.
 
 <hr />
