--- a/starters/chronoblog/content/posts/full-post/index.mdx
+++ b/starters/chronoblog/content/posts/full-post/index.mdx
@@ -12,7 +12,7 @@ Back in early 2013, I was working at a small startup in San Francisco called Sti
 
 We were both enamored by the work that people like Nicole Sullivan and Nicolas Gallagher were doing with Object-Oriented CSS and stealing lots of ideas for what we were working on. After we left the company, I decided to move back to the east coast and work for Kickstarter.
 
-![avatar](../../../images/avatar.png)
+![logo](../../../src/images/logo.png)
 
 In late 2013, I'd taken some of the ideas Adam and I were talking about at the time, and some of the problems we were working on at Kickstarter (involving a 1MB+ CSS bundle), and released the first version of Basscss. Around the same time, Adam released Tachyons. We both continued to develop each project separately and never landed on a common API for the two libraries.
 
