--- a/starters/chronoblog/src/gatsby-theme-chronoblog/post-footer.mdx
+++ b/starters/chronoblog/src/gatsby-theme-chronoblog/post-footer.mdx
@@ -4,7 +4,7 @@
 
 <img
   style={{
-    maxWidth: '120px',
+    maxWidth: '140px',
     marginRight: '15px',
     marginBottom: '5px',
     float: 'left',
@@ -17,13 +17,14 @@
 
 <p><b>{props.siteMetadata.author}</b></p>
 
-author@mail.com  
-twitter: @author
+✉️ author@mail.com  
+🐦 twitter: [@yourTwitterAccount](https://twitter.com/twitter)  
+🐙 github: [@yourGithubAccount](http://github.com/github)
 
 This is a **post-footer.mdx** - this file lives here: `src/gatsby-theme-chronoblog/post-footer.mdx`.
 
 Everything that will be written here will be displayed after **each post**.
 
-Write your name here, your email, post your avatar, put links to your social networks.
+Place your avatar, name, links to social networks and other contacts here.
 
 <hr />
