--- a/starters/chronoblog/content/links/link-to-chronoblog-theme-repo/index.mdx
+++ b/starters/chronoblog/content/links/link-to-chronoblog-theme-repo/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Link to Chronoblog Theme repo'
-cover: ./image.png
+cover: ./banner-small.png
 date: 2019-08-29
 link: https://github.com/Ganevru/gatsby-theme-chronoblog
 tags: ['link']
