--- a/starters/chronoblog/src/gatsby-theme-chronoblog/post-footer.mdx
+++ b/starters/chronoblog/src/gatsby-theme-chronoblog/post-footer.mdx
@@ -21,10 +21,13 @@
 🐦 twitter: [@yourTwitterAccount](https://twitter.com/twitter)  
 🐙 github: [@yourGithubAccount](http://github.com/github)
 
-This is a **post-footer.mdx** - this file lives here: `src/gatsby-theme-chronoblog/post-footer.mdx`.
+This is a **post-footer.mdx** - this file lives here:  
+**`src/gatsby-theme-chronoblog/post-footer.mdx`**.
 
 Everything that will be written here will be displayed after **each post**.
 
 Place your avatar, name, links to social networks and other contacts here.
+
+This is an mdx file, if you do not know what it is, then think of this file as a normal **markdown**.
 
 <hr />
