site meta: title => siteTitle and description => siteDescription and image => siteImage

--- a/packages/gatsby-theme-chronoblog/src/site-header.mdx
+++ b/packages/gatsby-theme-chronoblog/src/site-header.mdx
@@ -1,4 +1,4 @@
-<SiteHeaderTitle>{props.siteMetadata.title}</SiteHeaderTitle>
+<SiteHeaderTitle>{props.siteMetadata.siteTitle}</SiteHeaderTitle>
 
 <div style="margin-left: auto; margin-right: auto;"></div>
 <LightDarkSwitchButton darkLabel="🌙" lightLabel='☀️'/>
