--- a/starters/chronoblog/src/gatsby-theme-chronoblog/site-header.mdx
+++ b/starters/chronoblog/src/gatsby-theme-chronoblog/site-header.mdx
@@ -1,4 +1,4 @@
-<SiteHeaderTitle>{props.siteMetadata.title}</SiteHeaderTitle>
+<SiteHeaderTitle>{props.siteMetadata.siteTitle}</SiteHeaderTitle>
 
 <div style="margin-left: auto; margin-right: auto;"></div>
 <LightDarkSwitchButton darkLabel="🌙" lightLabel='☀️'/>
