--- a/starters/chronoblog/src/pages/index.mdx
+++ b/starters/chronoblog/src/pages/index.mdx
@@ -2,9 +2,9 @@
 
 Welcome to the Chronoblog starter!
 
-![banner-small](../src/images/banner-small.png)
+![banner-small](./banner-small.png)
 
-This text lives in a file: **`pages/index.mdx`** - replace it with what you want to see on the main page of your site. 🧐
+This text lives in a file: **`src/pages/index.mdx`** - replace it with what you want to see on the main page of your site. 🧐
 
 The main idea of ​​the Chronoblog is to help you create your personal website. Collect in one place everything you have done and written.
 
