--- a/starters/chronoblog/src/gatsby-theme-chronoblog/site-header.mdx
+++ b/starters/chronoblog/src/gatsby-theme-chronoblog/site-header.mdx
@@ -1,4 +1,12 @@
-<SiteHeaderTitle>{props.siteMetadata.siteTitle}</SiteHeaderTitle>
-
+<div
+  style={{
+    display: 'flex',
+    flexWrap: 'wrap',
+    fontWeight: 'bold',
+    fontSize: '18px'
+  }}
+>
+  <LinkNoStyle to="/">Home</LinkNoStyle>
+</div>
 <div style="margin-left: auto; margin-right: auto;"></div>
-<LightDarkSwitchButton darkLabel="🌙" lightLabel='☀️'/>
+<LightDarkSwitchButton darkLabel="🌙" lightLabel="☀️" />
