header menu style

--- a/starters/chronoblog/src/gatsby-theme-chronoblog/site-header.mdx
+++ b/starters/chronoblog/src/gatsby-theme-chronoblog/site-header.mdx
@@ -16,7 +16,7 @@
       alignItems: 'center'
     }}
   >
-    <LinkNoStyle to="/">Home</LinkNoStyle>
+    <Link to="/">Home</Link>
   </div>
   <div
     style={{
