--- a/packages/gatsby-theme-chronoblog/src/site-header.mdx
+++ b/packages/gatsby-theme-chronoblog/src/site-header.mdx
@@ -1,10 +1,10 @@
 <MenuMain>
   <MenuBlock>
-    <Link to="/">Home</Link>
-    <Link to="/">Home</Link>
+    <Link sx={{ variant: 'link.noStyle' }} to="/">
+      Home
+    </Link>
   </MenuBlock>
   <MenuBlock>
-    <Link to="/">Home</Link>
     <LightDarkSwitchButton darkLabel="🌙" lightLabel="☀️" />
   </MenuBlock>
 </MenuMain>
