--- a/starters/chronoblog-netlify-cms/src/gatsby-theme-chronoblog/site-header.mdx
+++ b/starters/chronoblog-netlify-cms/src/gatsby-theme-chronoblog/site-header.mdx
@@ -6,7 +6,7 @@
     fontSize: '18px'
   }}
 >
-  <LinkNoStyle to="/">Home</LinkNoStyle>
+  <Link to="/">Home</Link>
 </div>
 <div style="margin-left: auto; margin-right: auto;"></div>
 <LightDarkSwitchButton darkLabel="🌙" lightLabel="☀️" />
