header menu links

--- a/packages/gatsby-theme-chronoblog/src/site-header.mdx
+++ b/packages/gatsby-theme-chronoblog/src/site-header.mdx
@@ -1,10 +1,9 @@
 <MenuMain>
   <MenuBlock>
-    <Link sx={{ variant: 'link.noStyle' }} to="/">
-      Home
-    </Link>
+    <Link to="/">Home</Link>
   </MenuBlock>
   <MenuBlock>
+    <A href="/">test</A>
     <LightDarkSwitchButton darkLabel="🌙" lightLabel="☀️" />
   </MenuBlock>
 </MenuMain>
