--- a/starters/chronoblog-netlify-cms/src/gatsby-theme-chronoblog/site-header.mdx
+++ b/starters/chronoblog-netlify-cms/src/gatsby-theme-chronoblog/site-header.mdx
@@ -1,12 +1,8 @@
-<div
-  style={{
-    display: 'flex',
-    flexWrap: 'wrap',
-    fontWeight: 'bold',
-    fontSize: '18px'
-  }}
->
-  <Link to="/">Home</Link>
-</div>
-<div style="margin-left: auto; margin-right: auto;"></div>
-<LightDarkSwitchButton darkLabel="🌙" lightLabel="☀️" />
+<MenuMain>
+  <MenuBlock>
+    <Link to="/">Home</Link>
+  </MenuBlock>
+  <MenuBlock>
+    <LightDarkSwitchButton darkLabel="🌙" lightLabel="☀️" />
+  </MenuBlock>
+</MenuMain>
