--- a/starters/chronoblog/src/gatsby-theme-chronoblog/site-header.mdx
+++ b/starters/chronoblog/src/gatsby-theme-chronoblog/site-header.mdx
@@ -1,30 +1,8 @@
-<div
-  style={{
-    width: '100%',
-    display: 'flex',
-    flexWrap: 'wrap',
-    justifyContent: 'space-between',
-    alignItems: 'center',
-    fontWeight: 'bold',
-    fontSize: '18px'
-  }}
->
-  <div
-    style={{
-      display: 'flex',
-      flexWrap: 'wrap',
-      alignItems: 'center'
-    }}
-  >
+<MenuMain>
+  <MenuBlock>
     <Link to="/">Home</Link>
-  </div>
-  <div
-    style={{
-      display: 'flex',
-      flexWrap: 'wrap',
-      alignItems: 'center'
-    }}
-  >
+  </MenuBlock>
+  <MenuBlock>
     <LightDarkSwitchButton darkLabel="🌙" lightLabel="☀️" />
-  </div>
-</div>
+  </MenuBlock>
+</MenuMain>
