--- a/starters/chronoblog/src/gatsby-theme-chronoblog/post-footer.mdx
+++ b/starters/chronoblog/src/gatsby-theme-chronoblog/post-footer.mdx
@@ -1,6 +1,16 @@
-✉️ author@mail.com  
-🐦 twitter: [@yourTwitterAccount](https://twitter.com/twitter)  
-🐙 github: [@yourGithubAccount](http://github.com/github)
+<FontAwesomeIcon icon="envelope" /> author@mail.com 
+<br/>
+
+<FontAwesomeIcon icon="at" /> author@mail.com 
+<br/>
+
+<FontAwesomeIcon icon={['fab', 'twitter']} /> 
+[@yourTwitterAccount](https://twitter.com/twitter)
+<br/>
+
+<FontAwesomeIcon icon={['fab', 'github']} /> 
+[@yourGithubAccount](http://github.com/github)
+<br/>
 
 This is a post-footer.mdx - this file lives here:  
 **`src/gatsby-theme-chronoblog/post-footer.mdx`**.
