--- a/starters/chronoblog/src/gatsby-theme-chronoblog/post-footer.mdx
+++ b/starters/chronoblog/src/gatsby-theme-chronoblog/post-footer.mdx
@@ -1,16 +1,16 @@
-<FontAwesomeIcon icon="envelope" /> author@mail.com 
-<br/>
-
-<FontAwesomeIcon icon="at" /> author@mail.com 
-<br/>
-
-<FontAwesomeIcon icon={['fab', 'twitter']} /> 
-[@yourTwitterAccount](https://twitter.com/twitter)
-<br/>
-
-<FontAwesomeIcon icon={['fab', 'github']} /> 
-[@yourGithubAccount](http://github.com/github)
-<br/>
+<p>
+  <FontAwesomeIcon icon={['fab', 'twitter']} />
+  &nbsp;<a href="https://twitter.com/twitter">yourTwitter</a>
+  <br />
+  <FontAwesomeIcon icon={['fab', 'github']} />
+  &nbsp;<a href="https://github.com/github">yourGithub</a>
+  <br />
+  <FontAwesomeIcon icon={['fab', 'instagram']} />
+  &nbsp;<a href="https://github.com/github">yourInstagram</a>
+  <br />
+  <FontAwesomeIcon icon="at" />
+  &nbsp;<b>author@mail.com</b>
+</p>
 
 This is a post-footer.mdx - this file lives here:  
 **`src/gatsby-theme-chronoblog/post-footer.mdx`**.
