--- a/starters/chronoblog/src/gatsby-theme-chronoblog/post-footer.mdx
+++ b/starters/chronoblog/src/gatsby-theme-chronoblog/post-footer.mdx
@@ -1,20 +1,38 @@
-<p>
-  <FontAwesomeIcon icon={['fab', 'twitter']} />
-  &nbsp;<a href="https://twitter.com/twitter">yourTwitter</a>
-  <br />
-  <FontAwesomeIcon icon={['fab', 'github']} />
-  &nbsp;<a href="https://github.com/github">yourGithub</a>
-  <br />
-  <FontAwesomeIcon icon={['fab', 'instagram']} />
-  &nbsp;<a href="https://github.com/github">yourInstagram</a>
-  <br />
-  <FontAwesomeIcon icon="at" />
-  &nbsp;<b>author@mail.com</b>
-</p>
+import avatar from './avatar.png';
 
-This is a post-footer.mdx - this file lives here:  
+<div
+  style={{
+    display: 'flex',
+    alignItems: 'center'
+  }}
+>
+  <div style={{ marginRight: '25px' }}>
+    <img
+      style={{ borderRadius: '100%', height: '100%', width: '180px' }}
+      src={avatar}
+    ></img>
+  </div>
+  <div>
+    <h4>Author Name</h4>
+    <p>
+      <FontAwesomeIcon icon={['fab', 'twitter']} />
+      &nbsp;<a href="https://twitter.com/twitter">yourTwitter</a>
+      <br />
+      <FontAwesomeIcon icon={['fab', 'github']} />
+      &nbsp;<a href="https://github.com/github">yourGithub</a>
+      <br />
+      <FontAwesomeIcon icon={['fab', 'instagram']} />
+      &nbsp;<a href="https://www.instagram.com/">yourInstagram</a>
+      <br />
+      <FontAwesomeIcon icon="at" />
+      &nbsp;<b>author@mail.com</b>
+    </p>
+  </div>
+</div>
+
+This is a `post-footer.mdx` - this file lives here:  
 **`src/gatsby-theme-chronoblog/post-footer.mdx`**.
 
-Everything that will be written here will be displayed after **each blog post**.
-Place your avatar, name, links to social networks and other contacts here.
-This is an `mdx` file, if you do not know what it is, then think of this file as a normal **markdown**.
+This file is just an example, you can completely rewrite it.
+
+Everything that will be written here will be displayed after **each blog post**. Place your avatar, name, links to social networks and other information here.
