--- a/starters/chronoblog/src/gatsby-theme-chronoblog/post-footer.mdx
+++ b/starters/chronoblog/src/gatsby-theme-chronoblog/post-footer.mdx
@@ -3,10 +3,11 @@ import avatar from './avatar.png';
 <div
   style={{
     display: 'flex',
+    flexWrap: 'wrap',
     alignItems: 'center'
   }}
 >
-  <div style={{ marginRight: '25px' }}>
+  <div style={{ marginRight: '20px' }}>
     <img
       style={{ borderRadius: '100%', height: '100%', width: '180px' }}
       src={avatar}
