--- a/starters/chronoblog-netlify-cms/src/gatsby-theme-chronoblog/post-footer.mdx
+++ b/starters/chronoblog-netlify-cms/src/gatsby-theme-chronoblog/post-footer.mdx
@@ -1,31 +1,39 @@
-<hr />
+import avatar from './avatar.png';
 
-<p />
-
-<img
+<div
   style={{
-    maxWidth: '140px',
-    marginRight: '15px',
-    marginBottom: '5px',
-    float: 'left',
-    borderRadius: '50%',
-    overflow: 'hidden',
-    boxShadow: 'inset 0 2px 4px 0 hsla(0, 0%, 0%, .3)'
+    display: 'flex',
+    flexWrap: 'wrap',
+    alignItems: 'center'
   }}
-  src="/avatar.png"
-/>
+>
+  <div style={{ marginRight: '20px' }}>
+    <img
+      style={{ borderRadius: '100%', height: '100%', width: '180px' }}
+      src={avatar}
+    ></img>
+  </div>
+  <div>
+    <h4>Author Name</h4>
+    <p>
+      <FontAwesomeIcon icon={['fab', 'twitter']} />
+      &nbsp;<a href="https://twitter.com/twitter">yourTwitter</a>
+      <br />
+      <FontAwesomeIcon icon={['fab', 'github']} />
+      &nbsp;<a href="https://github.com/github">yourGithub</a>
+      <br />
+      <FontAwesomeIcon icon={['fab', 'instagram']} />
+      &nbsp;<a href="https://www.instagram.com/">yourInstagram</a>
+      <br />
+      <FontAwesomeIcon icon="at" />
+      &nbsp;<b>author@mail.com</b>
+    </p>
+  </div>
+</div>
 
-✉️ author@mail.com  
-🐦 twitter: [@yourTwitterAccount](https://twitter.com/twitter)  
-🐙 github: [@yourGithubAccount](http://github.com/github)
-
-This is a **post-footer.mdx** - this file lives here:  
+This is a `post-footer.mdx` - this file lives here:  
 **`src/gatsby-theme-chronoblog/post-footer.mdx`**.
 
-Everything that will be written here will be displayed after **each post**.
+This file is just an example, you can completely rewrite it.
 
-Place your avatar, name, links to social networks and other contacts here.
-
-This is an mdx file, if you do not know what it is, then think of this file as a normal **markdown**.
-
-<hr />
+Everything that will be written here will be displayed after **each blog post**. Place your avatar, name, links to social networks and other information here.
