--- a/starters/tests/content/posts/gatsby-theme-chronoblog-2/index.mdx
+++ b/starters/tests/content/posts/gatsby-theme-chronoblog-2/index.mdx
@@ -1,8 +1,8 @@
 ---
 date: 2019-07-26
-title: Chronoblog - Gatsby Theme
+title: Chronoblog - Gatsby Theme - 2
 tags: ['проект', 'gatsbyjs', 'chronoblog']
 cover: './image.png'
 ---
 
-tests
+tests 2
