--- a/starters/tests/content/posts/gatsby-theme-chronoblog-2/index.mdx
+++ b/starters/tests/content/posts/gatsby-theme-chronoblog-2/index.mdx
@@ -1,7 +1,7 @@
 ---
 date: 2019-07-26
 title: Chronoblog - Gatsby Theme - 2
-tags: ['проект', 'gatsbyjs', 'chronoblog']
+tags: ['project', 'gatsbyjs', 'chronoblog']
 cover: './image.png'
 ---
 
