--- a/starters/tests/src/gatsby-theme-chronoblog/site-header.mdx
+++ b/starters/tests/src/gatsby-theme-chronoblog/site-header.mdx
@@ -4,6 +4,6 @@
     <Link to="/projects">Projects</Link>
   </MenuBlock>
   <MenuBlock>
-    <LightDarkSwitchButton darkLabel="🌙" lightLabel="☀️" />
+    <LightDarkSwitchButton darkLabel="dark 🌙" lightLabel="light ☀️" />
   </MenuBlock>
 </MenuMain>
