fix showAllTagsButton tag

--- a/starters/tests/src/pages/index.mdx
+++ b/starters/tests/src/pages/index.mdx
@@ -5,5 +5,5 @@ More: [github.com/Ganevru/gatsby-theme-chronoblog](https://github.com/Ganevru/ga
 <p>&nbsp;</p>
 
 <FeedSearch />
-<Tags showAllTagsButton={false} />
+<Tags />
 <FeedItems />
