fontawesome icons css fix

--- a/starters/tests/src/pages/index.mdx
+++ b/starters/tests/src/pages/index.mdx
@@ -2,8 +2,22 @@
 
 More: [github.com/Ganevru/gatsby-theme-chronoblog](https://github.com/Ganevru/gatsby-theme-chronoblog)
 
-<p>&nbsp;</p>
+Chronoblog version for tests.
 
+<p>
+  <FontAwesomeIcon icon={['fab', 'twitter']} />
+  &nbsp;<a href="https://twitter.com/twitter">yourTwitter</a>
+  <br />
+  <FontAwesomeIcon icon={['fab', 'github']} />
+  &nbsp;<a href="https://github.com/github">yourGithub</a>
+  <br />
+  <FontAwesomeIcon icon={['fab', 'instagram']} />
+  &nbsp;<a href="https://www.instagram.com/">yourInstagram</a>
+  <br />
+  <FontAwesomeIcon icon="at" />
+  &nbsp;<b>author@mail.com</b>
+</p>
+<p>&nbsp;</p>
 <FeedSearch />
 <Tags />
 <FeedItems />
