author-banner fix

--- a/packages/gatsby-theme-chronoblog/src/site-header.mdx
+++ b/packages/gatsby-theme-chronoblog/src/site-header.mdx
@@ -3,6 +3,8 @@
     <Link to="/">Home</Link>
   </MenuBlock>
   <MenuBlock>
+    <SocialLinks />
+    <span>&nbsp;&nbsp;</span>
     <LightDarkSwitchButton darkLabel="🌙" lightLabel="☀️" />
   </MenuBlock>
 </MenuMain>
