--- a/starters/tests/src/pages/index.mdx
+++ b/starters/tests/src/pages/index.mdx
@@ -1,3 +1,5 @@
+<AuthorBanner></AuthorBanner>
+
 # Test version of Chronoblog
 
 More: [github.com/Ganevru/gatsby-theme-chronoblog](https://github.com/Ganevru/gatsby-theme-chronoblog)
@@ -21,7 +23,7 @@ I never liked the blog format so that, regardless of the platform (be it Medium 
   <FontAwesomeIcon icon="at" />
   &nbsp;<b>author@mail.com</b>
 </p>
-<p>&nbsp;</p>
+<AuthorBanner></AuthorBanner>
 <FeedSearch />
 <Tags />
 <FeedItems />
