--- a/packages/gatsby-theme-chronoblog/src/site-footer.mdx
+++ b/packages/gatsby-theme-chronoblog/src/site-footer.mdx
@@ -1,4 +1,4 @@
-div style={{textAlign: 'center'}}>
+<div style={{textAlign: 'center'}}>
 <SocialLinks justifyContent='center' fontSize={40} />
 <p>&nbsp;</p>
 <div>© {new Date().getFullYear()}</div>
