--- a/starters/tests/src/pages/index.mdx
+++ b/starters/tests/src/pages/index.mdx
@@ -1,4 +1,4 @@
-<AuthorBanner></AuthorBanner>
+<AuthorBanner author="New Author Test" authorHeadingStyle={{fontSize: '50px'}} sx={{color: '#dae1e3', backgroundImage: `url(/banner-bg.png)`,}}></AuthorBanner>
 
 # Test version of Chronoblog
 
