SocialLinks component readme

--- a/starters/tests/src/pages/index.mdx
+++ b/starters/tests/src/pages/index.mdx
@@ -17,6 +17,8 @@ The main idea of ​​Chronoblog is to allow you not only to write a personal b
 
 I never liked the blog format so that, regardless of the platform (be it Medium or WordPress), they all expect that the content that I will create is text, and it is desirable that this be a long article. A blog consisting of long articles looks and works organically (on any platform). But a blog consisting of any other content (video, presentations, links to external resources, or even just short notes) - it feels and works "somehow wrong".
 
+<SocialLinks sx={{ color: "#407b6e" }} />
+
 <p>
   <FontAwesomeIcon icon={['fab', 'twitter']} />
   &nbsp;<a href="https://twitter.com/twitter">yourTwitter</a>
