--- a/starters/tests/src/gatsby-theme-chronoblog/site-header.mdx
+++ b/starters/tests/src/gatsby-theme-chronoblog/site-header.mdx
@@ -2,6 +2,7 @@
   <MenuBlock>
     <Link to="/">Home</Link>
     <Link to="/projects">Projects</Link>
+    <Link to="/profile">Profile</Link>
   </MenuBlock>
   <MenuBlock>
     <LightDarkSwitchButton darkLabel="dark 🌙" lightLabel="light ☀️" />
