--- a/starters/tests/src/pages/profile.mdx
+++ b/starters/tests/src/pages/profile.mdx
@@ -9,6 +9,10 @@
   showMoreButton={false}
 />
 
+## Notes
+
+<FeedItems itemsFormat="compact" filterByTypes={['notes']} limit={5} />
+
 ## Podcasts
 
 <FeedItems itemsFormat="compact" filterByTags={['podcast']} limit={5} />
