--- a/starters/profile/src/pages/index.mdx
+++ b/starters/profile/src/pages/index.mdx
@@ -1,8 +1,5 @@
 <AuthorBanner />
-
-Welcome to the Gatsby Starter Chronoblog! This starter will help you quickly and easily create a website using Chronoblog Gatsby Theme.
-
-What you see is the main page of the site. Replace everything here with your own content by editing this file: `src/pages/index.mdx`
+&nbsp;
 
 ## Last Posts
 
