show more text fix

--- a/starters/profile/src/pages/index.mdx
+++ b/starters/profile/src/pages/index.mdx
@@ -3,12 +3,7 @@
 
 ## Last Posts
 
-<FeedItems
-  itemsFormat="compact"
-  filterByTypes={['posts']}
-  limit={5}
-  showMoreButton={false}
-/>
+<FeedItems itemsFormat="compact" filterByTypes={['posts']} limit={5} />
 
 ## Notes
 
