--- a/starters/profile/src/pages/index.mdx
+++ b/starters/profile/src/pages/index.mdx
@@ -2,7 +2,7 @@
 &nbsp;
 <h3>Posts and Articles&nbsp;&nbsp;<Link to='posts-and-articles'><Button sx={{py: '4px'}}>all posts and articles</Button></Link></h3>
 
-<FeedItems itemsFormat="compact" filterByTypes={['posts', 'article']} limit={4} />
+<FeedItems itemsFormat="compact" filterByTags={['post', 'article']} limit={4} />
 
 <h3>Podcasts&nbsp;&nbsp;<Link to='tags/podcast'><Button sx={{py: '4px'}}>all podcasts</Button></Link></h3>
 
