more content for profile starter

--- a/starters/profile/src/pages/index.mdx
+++ b/starters/profile/src/pages/index.mdx
@@ -1,12 +1,16 @@
 <AuthorBanner />
 &nbsp;
-<h3>Posts and Articles&nbsp;&nbsp;<Link to='posts-and-articles'><Button sx={{py: '4px'}}>all posts and articles</Button></Link></h3>
+<h3>Posts and Articles&nbsp;&nbsp;<Link to='posts-and-articles'><Button>all posts and articles</Button></Link></h3>
 
 <FeedItems itemsFormat="compact" filterByTags={['post', 'article']} limit={4} />
 
-<h3>Podcasts&nbsp;&nbsp;<Link to='tags/podcast'><Button sx={{py: '4px'}}>all podcasts</Button></Link></h3>
+<h3>Podcasts&nbsp;&nbsp;<Link to='tags/podcast'><Button>all podcasts</Button></Link></h3>
 
-<FeedItems itemsFormat="compact" filterByTags={['podcast']} limit={4} />
+<FeedItems itemsFormat="compact" filterByTags={['podcast']} limit={3} />
+
+<h3>Certificates&nbsp;&nbsp;</h3>
+
+<FeedItems itemsFormat="compact" filterByTags={['certificate']} />
 
 <h3>Projects</h3>
 
