--- a/starters/profile/src/pages/index.mdx
+++ b/starters/profile/src/pages/index.mdx
@@ -1,5 +1,5 @@
 <AuthorBanner />
-&nbsp;
+<p>&nbsp;</p>
 <h3>Posts and Articles&nbsp;&nbsp;<Link to='posts-and-articles'><Button>all posts and articles</Button></Link></h3>
 
 <FeedItems 
@@ -8,15 +8,21 @@
   limit={4} 
 />
 
+<p>&nbsp;</p>
 <h3>Podcasts&nbsp;&nbsp;<Link to='tags/podcast'>
 <Button>all podcasts</Button></Link></h3>
 
 <FeedItems itemsFormat="compact" filterByTags={['podcast']} limit={3} />
 
+<p>&nbsp;</p>
+
 ### Certificates
 
 <FeedItems itemsFormat="compact" filterByTags={['certificate']} />
 
+<p>&nbsp;</p>
+
 ### Projects
 
 <FeedItems itemsFormat="compact" filterByTags={['project']} />
+<p>&nbsp;</p>
