--- a/starters/profile/src/pages/posts-and-articles.mdx
+++ b/starters/profile/src/pages/posts-and-articles.mdx
@@ -1,4 +1,4 @@
 # Posts and Articles
 
 <FeedSearch />
-<FeedItems filterByTypes={['posts', 'article']} />
+<FeedItems filterByTags={['post', 'article']} />
