tests in starter tests

--- a/starters/tests/src/pages/index.mdx
+++ b/starters/tests/src/pages/index.mdx
@@ -33,6 +33,11 @@ I never liked the blog format so that, regardless of the platform (be it Medium 
   &nbsp;<b>author@mail.com</b>
 </p>
 
+<FeedItems 
+  itemsFormat="compact"
+  limit={5} 
+/>
+
 <FeedSearch />
 <Tags />
 <FeedItems />
