FontAwesome solid icons

--- a/packages/gatsby-theme-chronoblog/src/site-footer.mdx
+++ b/packages/gatsby-theme-chronoblog/src/site-footer.mdx
@@ -1,5 +1,5 @@
 <div style={{textAlign: 'center'}}>
 <SocialLinks justifyContent='center' fontSize={40} />
 <p>&nbsp;</p>
-<div>© {new Date().getFullYear()}</div>
+<div>© {new Date().getFullYear()}, built with <a style="text-decoration:none; color:#fff" href="https://gatsby.org"> Gatsby </a> through <a style="text-decoration:none; color:#fff" href='https://github.com/Chronoblog/gatsby-theme-chronoblog'>Chronoblog</a></div>
 </div>
