fix document for location

--- a/examples/chronoblog-disqus/src/gatsby-theme-chronoblog/post-footer.mdx
+++ b/examples/chronoblog-disqus/src/gatsby-theme-chronoblog/post-footer.mdx
@@ -1,8 +1,8 @@
 import { Disqus, CommentCount } from 'gatsby-plugin-disqus';
 let disqusConfig = {
-  url: location.href,
-  identifier: location.pathname,
-  title: location.pathname
+  url: document.location.href,
+  identifier: document.location.pathname,
+  title: document.location.pathname
 };
 
 <AuthorBanner></AuthorBanner>
