--- a/test-builds/chronoblog-test-content/src/gatsby-theme-chronoblog/site-header.mdx
+++ b/test-builds/chronoblog-test-content/src/gatsby-theme-chronoblog/site-header.mdx
@@ -1,10 +1,10 @@
 <MenuMain>
   <MenuBlock>
     <Link to="/">Home</Link>
-    <Link to="/projects">Projects</Link>
-    <Link to="/profile">Profile</Link>
   </MenuBlock>
   <MenuBlock>
-    <LightDarkSwitchButton darkLabel="dark 🌙" lightLabel="light ☀️" />
+    <SocialLinks />
+    <span>&nbsp;&nbsp;</span>
+    <LightDarkSwitchButton darkLabel="🌙" lightLabel="☀️" />
   </MenuBlock>
 </MenuMain>
