--- a/test-builds/chronoblog-test-content/src/pages/index.mdx
+++ b/test-builds/chronoblog-test-content/src/pages/index.mdx
@@ -1,42 +1,8 @@
-<AuthorBanner sx={{color: '#f1f2f6', backgroundImage: `url(/banner-bg.png)`,}}>
-  <AuthorBannerAvatar />
-      <div>
-        <AuthorBannerHeading sx={{fontSize: [7]}} />
-        <AuthorBannerDescription />
-        <SocialLinks fontSize="30px" />
-      </div>
-</AuthorBanner>
+<AuthorBanner />
 
-# Test version of Chronoblog
+Welcome to the Gatsby Starter Chronoblog! This starter will help you quickly launch a personal website using [Chronoblog Gatsby Theme](https://github.com/Chronoblog/gatsby-theme-chronoblog). Replace this text with your own here: `src/pages/index.mdx`
 
-More: [github.com/Chronoblog/gatsby-theme-chronoblog](https://github.com/Chronoblog/gatsby-theme-chronoblog)
-
-Chronoblog version for tests.
-
-The main idea of ​​Chronoblog is to allow you not only to write a personal blog but also to keep a record of everything important that you have done.
-
-I never liked the blog format so that, regardless of the platform (be it Medium or WordPress), they all expect that the content that I will create is text, and it is desirable that this be a long article. A blog consisting of long articles looks and works organically (on any platform). But a blog consisting of any other content (video, presentations, links to external resources, or even just short notes) - it feels and works "somehow wrong".
-
-<SocialLinks sx={{ color: "#407b6e" }} />
-
-<p>
-  <FontAwesomeIcon icon={['fab', 'twitter']} />
-  &nbsp;<a href="https://twitter.com/twitter">yourTwitter</a>
-  <br />
-  <FontAwesomeIcon icon={['fab', 'github']} />
-  &nbsp;<a href="https://github.com/github">yourGithub</a>
-  <br />
-  <FontAwesomeIcon icon={['fab', 'instagram']} />
-  &nbsp;<a href="https://www.instagram.com/">yourInstagram</a>
-  <br />
-  <FontAwesomeIcon icon="at" />
-  &nbsp;<b>author@mail.com</b>
-</p>
-
-<FeedItems 
-  itemsFormat="compact"
-  limit={5} 
-/>
+---
 
 <FeedSearch />
 <Tags />
